<resources>
    <string name="app_name">Inventory</string>

    <string name="action_delete">Delete</string>

    <string name="title_activity_person">Person</string>
    <string name="lbl_btn_save">Save</string>
    <string name="lbl_btn_update">Update Person</string>
    <string name="lbl_btn_addInv">Add Inventory Item</string>

    <string name="title_activity_person_list">Person List</string>
    <string name="lbl_name">Name: </string>
    <string name="lbl_location">Location: </string>
    <string name="lbl_room">Room: </string>

    <string name="title_activity_inventory">Inventory Item</string>
    <string name="inv_hint_desc">Enter description of item here...</string>
    <string name="inv_hint_barcode">Enter barcode here...</string>
    <string name="lbl_description">Description: </string>
    <string name="lbl_barcode">Bar Code: </string>
    <string name="lbl_btn_scan">Scan</string>
    <string name="lbl_btn_updateInv">Update</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_zbar_scan_activity">ZbarScanACtivity</string>

    <string name="hello_world">Hello world!</string>


</resources>
