<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.caci.inventory.PersonActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1.2"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/txtPersonName"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblPersonLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1.2"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/txtPersonLocation"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblPersonRoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_room"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1.2"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/txtPersonRoom"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:inputType="text"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_save"
        android:id="@+id/btnSave"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_update"
        android:id="@+id/btnUpdate"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_addInv"
        android:id="@+id/btnAddInv"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listInventory"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
